--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,7 +13,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    container: debian:bullseye
+    container: rust:bullseye
 
     steps:
     - uses: actions/checkout@v4
