--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Prepare
+      run: sudo apt install -y libudev libudev-dev
     - name: Build
       run: cargo build --verbose --release
     - name: Run tests
