--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Prepare
-      run: apt update && apt install -y libudev libudev-dev
+      run: apt update && apt install -y libudev-dev
     - name: Build
       run: cargo build --verbose --release
     - name: Run tests
