--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -45,6 +45,9 @@ jobs:
 
     - uses: Swatinem/rust-cache@v1
 
+    - name: Install libudev
+      run: apt update && apt install -y libudev-dev
+
     - name: Build
       uses: actions-rs/cargo@v1
       with:
