chore: update rust.yml

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -57,9 +57,9 @@ jobs:
     - name: Prepare archive
       run: |
         strip target/release/hq
-        export ARCHIVE_NAME=hq-${{ env.INPUT_TAG }}-linux-x64.tar.gz
+        export ARCHIVE_NAME=tempers-${{ env.INPUT_TAG }}-linux-x64.tar.gz
         echo "ARCHIVE_NAME=$ARCHIVE_NAME" >> $GITHUB_ENV
-        tar -czvf $ARCHIVE_NAME -C target/release hq
+        tar -czvf $ARCHIVE_NAME -C target/release tempers
 
     - name: Create release
       id: create_release
